Gulp build pipeline

--- a/src/templates/welcome/welcome.email.html
+++ b/src/templates/welcome/welcome.email.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/welcome/welcome.css" />
 <!-- move the above styles into your custom stylesheet -->
 
-{{>partials/hero.email.html}}
+{{>hero.email}}
 
 <container>
   <spacer size="16"></spacer>
