--- a/src/partials/hero.email.html
+++ b/src/partials/hero.email.html
@@ -1,10 +1,10 @@
 <wrapper class="header">
   <container>
     <row class="collapse">
-      <columns small="6">
+      <columns large="6" small="12">
         <img src="/placeholder/200x50?disable={{disable}}" />
       </columns>
-      <columns small="6" valign="middle">
+      <columns large="6" small="12" valign="middle">
         <p class="text-right">HERO</p>
       </columns>
     </row>
