Added Storybook ReadMe

--- a/src/templates/order-confirmed/order-confirmed.email.html
+++ b/src/templates/order-confirmed/order-confirmed.email.html
@@ -45,7 +45,7 @@
         <columns small="12" large="6">
           <p class="text-gray-300">
             Order Number:
-            <a href="#" class="text-green-600 underline">{{order-number}}</a>
+            <a href="#" class="text-blue-400 underline">{{order-number}}</a>
           </p>
           <p class="text-gray-300">
             Order Date: <span class="text-white">{{order-date}}</span>
